# looper

./: .gitignore  .gitmodules  .looper.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  bash_complete.sh  changelog.md  looper_init.py  looper_runtime_plot.R  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  update-usage-docs.sh
divvy_templates/: bulker_slurm_template.sub  localhost_bulker_template.sub  localhost_template.sub  slurm_singularity_template.sub
docs/: README.md  README_divvy.md  advanced.md  changelog.md  cluster-computing.md  concentric-templates.md  config-files.md  config-files.rst  configuration_divvy.md  containers.md  contributing.md  define-your-project.md  defining-a-project.md  derived-columns.md  faq.md  features.md  grouping-jobs.md  how-to-merge-inputs.md  how_to_define_looper_config.md  implied-columns.md  initialize.md  install_divvy.md  linking-a-pipeline.md  linking-multiple-pipelines.md  looper-config.md  looper-report.md  multiple-pipelines.md  parameterize-pipelines.md  parameterizing-pipelines.md  pipeline-config.md  pipeline-interface-specification.md  pipeline-interface.md  pipeline-tiers.md  pipestat.md  pre-submission-hooks.md  project-config-looper.md  running-a-pipeline.md  running-on-a-cluster.md  sample-annotation-sheet.md  support.md  (+6 more)
docs_jupyter/: cli_divvy.ipynb  debug_divvy.ipynb  hello-world-pephub.ipynb  hello-world.ipynb  hello-world.md  tutorial_divvy.ipynb
examples/: microtest_annotation.csv  microtest_project_config.yaml
hello_looper_results/: count_lines_frog_1.sub
looper/: __init__.py  __main__.py  _devtools.py  _version.py  cli.py  cli_divvy.py  cli_looper.py  cli_pydantic.py  conductor.py  const.py  divvy.py  exceptions.py  html_reports.py  html_reports_pipestat.py  html_reports_project.py  html_reports_project_pipestat.py  html_vars.py  looper.py  looper_config.py  looper_pipeline_interface.py  models.py  parser_types.py  pipeline_interface.py  pipeline_interface2.py  pipereqs.py  plugins.py  processed_project.py  project.py  project_piface_group.py  protocol_interface.py  sample.py  submission_manager.py  utils.py
oldtests/: conftest.py  helpers.py  interactive.py  test_basic_interface_group.py  test_looper.py  test_sample_subtypes.py  test_submission_scripts.py  test_utils.py  test_with_microtest_as_smoketest.py
requirements/: requirements-all.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt
tests/: conftest.py  helpers.py  test_clean.py  test_cli_startup.py  (+10 more)
(+297 files in other folders)
